--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,10 +91,14 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
 
     // Dagger Hilt
+//    implementation "com.google.dagger:hilt-android:2.39.1"
+//    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0"
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
 
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
