--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,4 +141,7 @@ dependencies {
     //chucker
     debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
     releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.2"
+
+    //WorkManager
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 }
