--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-android-extensions'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
@@ -81,9 +83,24 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //Testing Component
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation 'org.mockito:mockito-inline:3.6.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'androidx.test:core-ktx:1.4.0'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
+    testImplementation 'io.mockk:mockk:1.12.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
+    testImplementation 'com.google.truth:truth:1.0.1'
 
 
     // Navigation Component
@@ -91,14 +108,15 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
 
     // Dagger Hilt
-//    implementation "com.google.dagger:hilt-android:2.39.1"
-//    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
+
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
 //    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0"
 //    kapt "androidx.hilt:hilt-compiler:1.0.0"
+//    implementation "com.google.dagger:hilt-android:2.39.1"
+//    kapt "com.google.dagger:hilt-android-compiler:2.39.1"
 
     // Retrofit + GSON
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
@@ -134,14 +152,20 @@ dependencies {
 
     implementation("io.coil-kt:coil:1.0.0-rc3")
 
-    //testing
-    testImplementation 'org.mockito:mockito-core:3.6.0'
-    testImplementation 'org.mockito:mockito-inline:3.6.0'
-
     //chucker
     debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
     releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.2"
 
     //WorkManager
     implementation "androidx.work:work-runtime-ktx:2.7.1"
+
+    //firebase
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:31.0.2')
+
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    // Add the dependencies for the Crashlytics and Analytics libraries
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+
 }
